fix: Add token authentication to WebSocket patchbay connection
- Pass auth token as query parameter in WebSocket URL
- Validate token before accepting WebSocket connection
- Reject connections with invalid or missing tokens
- Fixes 'Missing or invalid Authorization header' error

--- a/tools/jacktrip_hub/static/patchbay.html
+++ b/tools/jacktrip_hub/static/patchbay.html
@@ -308,7 +308,8 @@
         // WebSocket connection
         function connectWebSocket() {
             const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
-            const wsUrl = `${protocol}//${window.location.host}/ws/patchbay`;
+            const token = localStorage.getItem('jacktrip_token');
+            const wsUrl = `${protocol}//${window.location.host}/ws/patchbay?token=${encodeURIComponent(token)}`;
             
             ws = new WebSocket(wsUrl);
             
