--- a/tools/jacktrip_hub/static/rooms.html
+++ b/tools/jacktrip_hub/static/rooms.html
@@ -315,7 +315,7 @@
             <form onsubmit="createRoom(event)">
                 <div class="form-group">
                     <label>Room Name *</label>
-                    <input type="text" id="roomName" required placeholder="e.g., Jazz Session">
+                    <input type="text" id="roomName" required placeholder="e.g., Jazz Session" pattern="[a-zA-Z\s]+" title="Room name can only contain letters and spaces">
                 </div>
                 <div class="form-group">
                     <label>Description</label>
