--- a/tools/jacktrip_hub/static/rooms.html
+++ b/tools/jacktrip_hub/static/rooms.html
@@ -289,7 +289,7 @@
 <body>
     <div class="container">
         <div class="header-top">
-            <img src="/jackdaw.svg" alt="Jackdaw" class="logo-icon">
+            <img src="/static/jackdaw.svg" alt="Jackdaw" class="logo-icon">
             <h1>Jackdaw Hub</h1>
         </div>
         
