Phase 1: Implement permission system
- Add is_owner and has_patchbay_access columns to users table
- First user becomes owner with patchbay access
- Add GET /users endpoint (owner only)
- Add POST /users/{user_id}/permissions endpoint
- Update login/register responses with permission flags
- Update WebSocket patchbay to check has_patchbay_access
- Add permissions UI for owner (band members list with toggle)
- Owner can grant/revoke patchbay access to members
- Store permissions in localStorage
- Add missing Room models for legacy multi-room support

--- a/tools/jacktrip_hub/static/index.html
+++ b/tools/jacktrip_hub/static/index.html
@@ -326,9 +326,15 @@
                 const data = await response.json();
                 localStorage.setItem('jacktrip_token', data.token);
                 localStorage.setItem('jacktrip_user_id', data.user_id);
+                localStorage.setItem('jacktrip_username', data.username);
+                localStorage.setItem('jacktrip_is_owner', data.is_owner);
+                localStorage.setItem('jacktrip_has_patchbay_access', data.has_patchbay_access);
+                showMessage(messageDiv, 'Registration successful! Redirecting...', 'success');
+                localStorage.setItem('jacktrip_is_owner', data.is_owner);
+                localStorage.setItem('jacktrip_has_patchbay_access', data.has_patchbay_access);
                 showMessage(messageDiv, 'Login successful! Redirecting...', 'success');
                 setTimeout(() => {
-                    window.location.href = '/patchbay';
+                    window.location.href = '/rooms-ui';
                 }, 1500);
             } catch (err) {
                 showMessage(messageDiv, 'Connection error: ' + err.message, 'error');
