refactor: Rename rooms-ui endpoint to manage-users
- Better semantic naming for single-room mode
- Endpoint is about user management, not rooms
- Updated dashboard link to use new endpoint name

--- a/tools/jacktrip_hub/static/dashboard.html
+++ b/tools/jacktrip_hub/static/dashboard.html
@@ -259,7 +259,7 @@
             <p>As the hub owner, you have full administrative access to manage users and audio routing.</p>
             <div class="button-group">
                 <a href="/patchbay" class="btn">Open Patchbay</a>
-                <a href="/rooms-ui" class="btn btn-secondary">Manage Users</a>
+                <a href="/manage-users" class="btn btn-secondary">Manage Users</a>
             </div>
         </div>
         
